Fixes game list bouncing in x-dimension on small viewports

--- a/src/index.css
+++ b/src/index.css
@@ -742,7 +742,7 @@ button:enabled,
 
   .game {
     text-align: left;
-    overflow-x: visible;
+    overflow-x: hidden;
     max-height: 225px;
     min-height: 175px;
     min-width: 100%;
@@ -853,7 +853,7 @@ button:enabled,
 
   .game {
     text-align: left;
-    overflow-x: visible;
+    overflow-x: hidden;
     min-height: 175px;
     min-width: 100%;
     grid-template-rows: 1.5rem 1.5rem auto;
